load-tests/csv_processor/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: io-csv-processor
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: bal.perf.test
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: csv-processor-s
            port:
              number: 9090
